# tateru

./: CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: release.yml
src/: bridge.rs  config.rs  devices.rs  engine.rs  error.rs  ffi.rs  lib.rs  shutdown.rs  types.rs  vm.rs
src/vz/: configuration.rs  engine.rs  mod.rs  state.rs
