[package]
name = "tateru"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Tateru — direct libkrun FFI control for macOS VMs"
homepage = "https://github.com/pleme-io/tateru"
repository = "https://github.com/pleme-io/tateru"
license = "MIT"
build = "build.rs"

[features]
default = []
config = ["dep:shikumi"]
testing = []

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
libc = "0.2"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
shikumi = { git = "https://github.com/pleme-io/shikumi", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "test-util", "macros"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
