[package]
name = "tateru"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Tateru — direct libkrun FFI control for macOS VMs"
homepage = "https://github.com/pleme-io/tateru"
repository = "https://github.com/pleme-io/tateru"
license = "MIT"
build = "build.rs"

[features]
default = []
config = ["dep:shikumi"]
testing = []
# Virtualization.framework engine (VzEngine) alongside the default
# Hypervisor.framework / libkrun engine. Required for Apple
# Rosetta-for-Linux x86_64 translation — libkrun's HV path can't drive
# it because Rosetta's runtime check requires VZ + rosettaModeEnabled.
# macOS-only; Cargo target gating keeps non-macOS builds free of these.
vz = [
  "dep:objc2",
  "dep:objc2-foundation",
  "dep:objc2-virtualization",
  "dep:block2",
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
libc = "0.2"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
shikumi = { version = "0.1", optional = true }

# Virtualization.framework bindings — gated on `vz` feature + macOS target.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["NSString", "NSURL", "NSError", "NSArray"] }
objc2-virtualization = { version = "0.3", optional = true, features = [
  "VZVirtualMachine",
  "VZVirtualMachineConfiguration",
  "VZVirtioBlockDeviceConfiguration",
  "VZDiskImageStorageDeviceAttachment",
  "VZVirtioFileSystemDeviceConfiguration",
  "VZSharedDirectory",
  "VZSingleDirectoryShare",
  "VZMultipleDirectoryShare",
  "VZLinuxRosettaDirectoryShare",
  "VZVirtioSocketDeviceConfiguration",
  "VZVirtioSocketListener",
  "VZVirtioSocketConnection",
  "VZGenericPlatformConfiguration",
  "VZEFIBootLoader",
  "VZLinuxBootLoader",
  "VZGenericMachineIdentifier",
  "VZError",
] }
block2 = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "test-util", "macros"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
